Estimate Gaussian Parameters

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ Assignment 7/plotDataPoints.m
 Assignment 7/plotProgresskMeans.m
 Assignment 7/runkMeans.m
 Assignment 7/featureNormalize.m
+Assignment 8/multivariateGaussian.m
+Assignment 8/visualizeFit.m
+Assignment 8/checkCostFunction.m
+Assignment 8/computeNumericalGradient.m
+Assignment 8/loadMovieList.m
+Assignment 8/normalizeRatings.m
